--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Fitness Calculate Tools <br>
   </title>
+
+<meta name="google-site-verification" content="tRgrNV5W-AwBZ2LBDmUq6GoTuzfjp_eoZR4F0xBvJT0" />
+
+
+
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Tamil&display=swap" rel="stylesheet">
   <style>
     body {
