Update 3  BMR Calculator .html

--- a/3  BMR Calculator .html
+++ b/3  BMR Calculator .html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+
+<!DOCTYPE html>
 <html lang="ta">
 <head>
   <meta charset="UTF-8" />
@@ -108,4 +110,14 @@
     }
   </script>
 </body>
+</html>
+
+
+
+
+
+
+
+
+
 </html>
