--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
   </center> <br>
      
     <div class="grid">
-      <div class="card"><div>🔥 Calorie Calculator</div><a href="1 calorie.html">Go →</a></div>
+      <div class="card"><div>🔥 Calorie Calculator</div><a href="calorie.html">Go →</a></div>
       <div class="card"><div>📏 BMI Calculator</div><a href="2 BMI Calculator.html">Go →</a></div>
       <div class="card"><div>💤 BMR Calculator</div><a href="3  BMR Calculator .html">Go →</a></div>
       <div class="card"><div>🧪 Body Fat % Calculator</div><a href="4 Body Fat Percentage Calculator.html">Go →</a></div>
