--- a/index.html
+++ b/index.html
@@ -110,10 +110,13 @@
   <div class="container">
 
   <!-- 🔸 First Ad Placeholder ஆரம்பம் -->
-  <div id="adBox1" class="ads-box">
+    <div id="adBox1" class="ads-box">
+  <a href="https://onlineweb123.github.io/Meadi-Aqua-Tech-Website-/" target="_blank">
     <img src="https://drive.google.com/thumbnail?id=1s_OGShoUgIswn3NNW4s2bvH-CGm0-U06&sz=w1000" alt="Ad Banner">
-  </div>
+  </a>
+</div>
   <!-- 🔸 First Ad Placeholder முடிவு -->
+
   
 
   <center> 
@@ -148,9 +151,11 @@
   </div>
 
   <!-- 🔸 Second Ad Placeholder ஆரம்பம் -->
-  <div id="adBox2" class="ads-box">
+    <div id="adBox2" class="ads-box">
+  <a href="https://onlineweb123.github.io/Meadi-Aqua-Tech-Website-/" target="_blank">
     <img src="https://drive.google.com/thumbnail?id=1s_OGShoUgIswn3NNW4s2bvH-CGm0-U06&sz=w1000" alt="Ad Banner">
-  </div>
+  </a>
+</div>
    <!-- 🔸 Second Ad Placeholder முடிவு -->
 
 
