--- a/help.html
+++ b/help.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+
+<!DOCTYPE html>
 <html lang="ta">
 <head>
   <meta charset="UTF-8" />
@@ -143,6 +145,18 @@
     <h2>😴 Sleep Calculator</h2>
     <p>மிகச்சிறந்த தூக்க நேரத்தை திட்டமிட உதவும் கருவி.</p>
   </div>
+  
+  
+  
+  <!-- Add விளம்பரம் ஆரம்பம் -->
+<div style="text-align:center; margin-top:20px;">
+  <button onclick="window.location.href='Add.html'" 
+          style="padding:10px 20px; font-size:16px; border:none; border-radius:8px; background:#007bff; color:#fff; cursor:pointer;">
+    உங்களுக்கு விளம்பரம் செய்ய
+  </button>
+</div>
+<!-- Add விளம்பரம் முடிவு -->
+  
 
 </body>
 </html>
