--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
   <!-- 🔸 First Ad Placeholder ஆரம்பம் -->
     <div id="adBox1" class="ads-box">
   <a href="https://onlineweb123.github.io/Meadi-Aqua-Tech-Website-/" target="_blank">
-    <img src="https://drive.google.com/thumbnail?id=1s_OGShoUgIswn3NNW4s2bvH-CGm0-U06&sz=w1000" alt="Ad Banner">
+    <img src="https://drive.google.com/file/d/1PFrRn63-xEmXhQ4VTAMLtOophWfVQ907/view?usp=drivesdk">
   </a>
 </div>
   <!-- 🔸 First Ad Placeholder முடிவு -->
@@ -153,7 +153,7 @@
   <!-- 🔸 Second Ad Placeholder ஆரம்பம் -->
     <div id="adBox2" class="ads-box">
   <a href="https://onlineweb123.github.io/Meadi-Aqua-Tech-Website-/" target="_blank">
-    <img src="https://drive.google.com/thumbnail?id=1s_OGShoUgIswn3NNW4s2bvH-CGm0-U06&sz=w1000" alt="Ad Banner">
+    <img src="https://drive.google.com/file/d/1PFrRn63-xEmXhQ4VTAMLtOophWfVQ907/view?usp=drivesdk">
   </a>
 </div>
    <!-- 🔸 Second Ad Placeholder முடிவு -->
