--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ta">
 <head>
   <meta charset="UTF-8" />
@@ -112,7 +113,7 @@
   <!-- 🔸 First Ad Placeholder ஆரம்பம் -->
     <div id="adBox1" class="ads-box">
   <a href="https://onlineweb123.github.io/Meadi-Aqua-Tech-Website-/" target="_blank">
-    <img src="https://drive.google.com/thumbnail?id=1s_OGShoUgIswn3NNW4s2bvH-CGm0-U06&sz=w1000" alt="Ad Banner">
+    <img src="https://drive.google.com/thumbnail?id=1PFrRn63-xEmXhQ4VTAMLtOophWfVQ907&sz=w1000" alt="Ad Banner">
   </a>
 </div>
   <!-- 🔸 First Ad Placeholder முடிவு -->
@@ -153,7 +154,7 @@
   <!-- 🔸 Second Ad Placeholder ஆரம்பம் -->
     <div id="adBox2" class="ads-box">
   <a href="https://onlineweb123.github.io/Meadi-Aqua-Tech-Website-/" target="_blank">
-    <img src="https://drive.google.com/thumbnail?id=1s_OGShoUgIswn3NNW4s2bvH-CGm0-U06&sz=w1000" alt="Ad Banner">
+    <img src="https://drive.google.com/thumbnail?id=1PFrRn63-xEmXhQ4VTAMLtOophWfVQ907&sz=w1000" alt="Ad Banner">
   </a>
 </div>
    <!-- 🔸 Second Ad Placeholder முடிவு -->
