--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ta">
 <head>
   <meta charset="UTF-8" />
@@ -126,6 +127,11 @@
       </button>
     </a> 
   </center> <br>
+  <center> <a href="Daily Monitor.html" > <button style="background-color:#086584 ; color: white; padding: 10px 20px; border: none; border-radius: 8px; font-size: 16px; font-family: 'Noto Sans Tamil', sans-serif; cursor: pointer;">
+   My Personal Daily Monitor 📝
+</button> </a> </Center>
+
+  <br>
      
   <div class="grid">
     <div class="card"><div>🔥 Calorie Calculator</div><a href="1 Calorie.html">Go →</a></div>
